# wmbusmeters

./: CMakeLists.txt  Makefile  README.md  wmbusmeters.conf  wmbusmeters.pc.in
scripts/: gen_manual.sh  gen_version.sh
src/: CMakeLists.txt  config.cc  dvparser.cc  main.cc  meter_generic.cc  meters.h  meters_common_implementation.h  testinternals.cc  units.h  util.cc  util.h
